@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>The Official FVWM Home Page</title>
-      <LINK REL="SHORTCUT ICON" HREF="fvwm.ico">
+  <title>The Official FVWM Home Page</title>
+  <link rel="shortcut icon" href="fvwm.ico">
 </head>
   <body BACKGROUND="black-stone1.jpg"
     bgcolor="#303030" text="#ffffff"
@@ -21,9 +21,12 @@ Check it out!
 <p><font size="+1" color="yellow">UPCOMING!</font>
 <p>On the 1st of June 2003 we are celebrating fvwm's tenth birthday.
 Stay tuned for updates.
+
+<!--
 <p><font size="+1" color="yellow">NEWS FLASH!</font>
 <p>As of January 2003 FVWM 2.4.15, a stable
 release, is now available for <a href="download.html">download</a>.
+-->
 
 <hr>
 <blockquote>
@@ -62,7 +65,7 @@ release, is now available for <a href="download.html">download</a>.
 <hr>
 <center>
 Created: Jan 31, 1996;
-Last modified: Mar 15, 2003.
+Last modified: Mar 27, 2003.
 </center>
 
 <!--
