@@ -1,3 +1,8 @@
+2003-03-27  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.html:
+	disabled NEWS FLASH
+
 2003-03-15  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
